--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://Shafin-A.github.io/portfolio",
+  "homepage" : "http://Shafin-A.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
