--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://Shafin-A.github.io/",
+  "homepage": "http://Shafin-A.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-pdf": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
